--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -244,7 +244,7 @@ However vertical climate gradients within forests are known to be steeper than t
 ## Trait variation 
 
 
-Leaf traits are shaped by light and height and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat and C uptake by leaves across forest vertical strata. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [@niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [Casal, 2013]. As a result, degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also influences leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
+Leaf traits are shaped by light and height and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat and C uptake by leaves across forest vertical strata [Rosendaal et al. 2006]. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [Keenan and Niinemets et al.2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [Casal, 2013]. As a result, degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also influences leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
 
 (Elsa: it may also be worth mentioning leaf turnover / leaf longevity briefly in the above paragraph in the context of leaf development and trait formation.)
 
@@ -264,7 +264,7 @@ However, the combination of stressors experienced by taller trees' foliage are d
 
 However, even with distinct features of sun and shade traits, trait adaptation to light maximizes light use efficiency for photosynthesis at both high and low light, while also adapting to other stressors as mentioned above. In light limited conditions, shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis, which "leads to a similar chlorphyll content on an area basis compared with sun leaves. This enables shade leaves to realize similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, Rozendaal et al. 2006]
 
-With increasing height and age, competition for light decreases as availability  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenetic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$), , greater photosynthetic capacity in low light and greater carbon gain capacities in shade tolerators than in intolerators [Niinemets, 2006].Rozendaal et al. 2006, Koike et al. 2001 has more info about this.   
+With increasing height and age, competition for light decreases as availability  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenetic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities in shade tolerators than in intolerators [Niinemets, 2006]. Shade intolerant species experience greater heterogeniety in light during ontogeny [why?-nidhi],thus LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light [H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009).].Whereas, Rozendaal et al. 2006 found no significant trait differences with ontogeny and adult stature trees. Koike et al. 2001 has more info about this.   
 
 **Intra-canopy on the same species leaf trait variation**
 
@@ -289,9 +289,9 @@ nocite: |
 
 Are traits shaped more by height or light?
 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, where as Q10 and E10 remained contant with height [Cavaleri et al. 2008]. In temperate forests, Acer saccharum exhibited greater LMA with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing seaon LMA continued to increase in the upper canopy due to light driven changes [Coble et al. 2016]
+Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, where as Q10 and E10 remained contant with height [Cavaleri et al. 2008]. In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing seaon LMA and $N area$ continued to increase in the upper canopy due to light driven changes [Coble & Cavaleri 2015; Coble et al. 2016].In addition, carbon isotope composition also increased with height, independent of ligtht [Coble & Cavaleri 2015]
 
-Height-based leaf trait variation in Quercus alba and Quercus velutina showed decrease in lobation of upper canopy sun leaves with increasing height, suggesting an adaptation to hydraulic constraints with increasing height [@kusiPlasticLeafMorphology2020]. However, Sack et al. 2006 did not observe trait variation based on height in Quercus spp.
+Height-based leaf trait variation in Quercus alba and Quercus velutina showed decrease in lobation with increased height in two tall species, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, Sack et al. 2006 did not observe trait variation based on height in Quercus spp.
 
 Height is more important than light in determining leaf morphology in a tropical forests (Cavaleri et al. 2010)
 - (Cavaleri et al. 2008) 
@@ -300,21 +300,22 @@ Height is more important than light in determining leaf morphology in a tropical
 
 *Leaf area / characteristic dimension*:
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
+
+Leaf temperature is generally associated to increase with leaf area ($LA$) [ Wright et al. 2019]. However, thermal imagery shows that leaf area can be a predictor for leaf temperatures ranges [$Trange$] among a given number of samples, but effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in efffective leaf width, boundary layer thickness and resistance increases along with stomtal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn traspirational cooling in large leaves [@fauset_differences_2018]. Because rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in deteriming the changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. 
 - Max stomatal conductance - increases with canopy height (Kenzo et al. 2015)
 Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
-Leaf width and characteristic dimension influence boundary layer resistance which generally is greater in wider understory leaves than upper canopy.
-Leaf temperature increases with leaf area {Wright et al. 2019}
--Boundary layer resistance and thermal sensitivity also depends of leaf width, leaf size and structure. Increase in leaf width increases stomatal resistance-- dependent on stomtal activity and boundary layer resistance [@fauset_differences_2018]. Leaf characteristics such as lobes, leaf elongation and serration, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies[Vogel 1970; Roth-Nebelsick 2001;
-Schuepp 1993; Sack et al. 2006].
--Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width [along the vertical gradient], such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
+Leaf characteristics such as lobes, leaf elongation and serration, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies[Vogel 1970; Roth-Nebelsick 2001;
+Schuepp 1993; Sack et al. 2006]. 
 
 *Thermal time constant (probably not a lot out there)*
 -	Curtis et. al, 2018 – higher in more exposed leaves (heat up slower, cool slower)
 -	Michaeletz has used this in theoretical calculations (Michaeletz et al. 2016 and 2015?
-I have Michaletz's code to calculate the thermal time constant, so if there are data, or general tendencies for changes in leaf area, LMA, leaf width and leaf dry matter content we can determine how these trends would translate into changes in thermal time constant. 
-In practice, an important driver seems to be leaf water content per unit area (I think Lawren might have mentioned this as well in our meeting), so if we can conclude that that is something that scales with the vertical gradient, then we can make an informed guess about how the thermal time constant will change--Martijn Slot
+
 -Effective leaf width defined as the largest circle that can be inscribed in a leaf is an effective predictor of leaf thermal time constant and leaf boundary layer thickness. Large leaves have greater effective leaf width which increases their thermal time constant by prolonging leaf cooling time compared to small leaves that have a smaller effective leaf width, and thus small thermal time constant with shorter cooling time. Increased leaf width typical in larger leaves was also observed to increase leaf to air temperature difference. [@leighInfluenceLeafSize2017]   
 
+
+[I have Michaletz's code to calculate the thermal time constant, so if there are data, or general tendencies for changes in leaf area, LMA, leaf width and leaf dry matter content we can determine how these trends would translate into changes in thermal time constant. 
+In practice, an important driver seems to be leaf water content per unit area (I think Lawren might have mentioned this as well in our meeting), so if we can conclude that that is something that scales with the vertical gradient, then we can make an informed guess about how the thermal time constant will change--Martijn Slot]
 
 *Carotinoids/Xanthophyll cycle pigments* 
 -	photoprotective- disseminate heat, acclimate to high T. THese are proportional to irradiance 
