--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -107,7 +107,7 @@ These changes are expected to have profound effects on forest biodiversity and e
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
 
-Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient, and with implications for whole plant performance [Bertrand et al. 2011].
+Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient, and with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 
 The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].
 Increasing temperature has profound impacts on canopy cover, such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts, causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020].Larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continuOUS evapotranspiration, thereby buffering understory microclimates [REF].  
@@ -244,11 +244,11 @@ However vertical climate gradients within forests are known to be steeper than t
 ## Trait variation 
 
 
-Leaf traits are shaped by light and height and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat and C uptake by leaves across forest vertical strata [Rosendaal et al. 2006]. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [Keenan and Niinemets et al.2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [Casal, 2013]. As a result, degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also influences leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
+Leaf traits are shaped by light and height and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, hea, C uptake and metabolism by leaves across forest vertical strata [Rosendaal et al. 2006]. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [Keenan and Niinemets et al.2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [Casal, 2013]. As a result, degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also influences leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
 
 (Elsa: it may also be worth mentioning leaf turnover / leaf longevity briefly in the above paragraph in the context of leaf development and trait formation.)
 
-An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [@chenLeafEconomicsSpectrum2020a], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and wtih height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. 
+An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [@chenLeafEconomicsSpectrum2020a], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. 
 
 Classification schemes for sun and shade tolerance rankings have been highlighted by multiple studies [Baker 1949; @niinemetsControversyTraitsConferring2006; Feng et al. 2018]. For example, classifications from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". 
 
@@ -257,10 +257,11 @@ Additionally, shade leaves in the understory can be broken into three categories
 
 **Inter-species vertical gradient leaf trait variation**
 
-Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees that are shaded by overstory. As a result, the sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, hairier, with thicker cuticle and greater lobation than shade leaves
+Leaf traits (functional and physiological) co-vary with their environment to maintain optimum metabolic and temperature under various circumstances [@michaletzEnergeticCarbonEconomic2016].
+Taller trees in dense forests tend to be exposed to greater irradiance but maintain shaded leaves in canopy interior and lower canopy compared to shorter understory trees that are shaded by overstory. As a result, the sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, hairier, with thicker cuticle and greater lobation than shade leaves
 [Rozendaal et al. 2006, Mathur et al. 2018, more REFS]. 
 
-However, the combination of stressors experienced by taller trees' foliage are different from that experienced by understory trees. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, higher wind speed, etc. whereas for understory leaves are subjected to --shade or limitation of light, niche competition and herbivory. Overstory sun leaves are subjected to overheating pressures, thus through developed traits of increased stomatal density, transpiration and water supply along with increased convective heatloss by reducing boundary layer resistance, sun leaves are able to maintain optimum temperature. Additionally, overstory sun leaves tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Adaptive traits in understory enable light capture efficiency while maintaing larger width leaves with comparitevely fewer stomtal density as a result of available water, lesser $VPD$, and wind speed. "Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn]. Those differences in traits are likely to affect their thermal properties as well. Leaves act as windows to plant performance, enhancing plant adaptation to changing environment, thus traits acclimated to prior stressors have been suggested to enable whole plants to respond differently to forthcoming stress [Rozendaal et al. 2006; @niinemetsResponsesForestTrees2010a]
+However, the combination of stressors experienced by taller trees' foliage are different from that experienced by understory trees. For example, overstory sun leaves in particular experience greater loads of PAR, $VPD$, elevated temperatures, higher wind speed, etc.. whereas for understory leaves are subjected to --shade or limitation of light, niche competition and herbivory. Overstory sun leaves are subjected to overheating pressures, thus through developed traits of increased stomatal density, transpiration and water supply along with increased convective heatloss by reducing boundary layer resistance, sun leaves are able to maintain optimum temperature for photosynthesis and metabolic processes. Additionally, overstory sun leaves tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Adaptive traits in understory enable light capture efficiency while maintaing larger width leaves with comparitevely fewer stomtal density as a result of available water, lesser $VPD$, and wind speed. "Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn]. Those differences in traits are likely to affect their thermal properties as well. Leaves act as windows to plant performance, enhancing plant adaptation to changing environment, thus leaf traits acclimated to prior stressors have been suggested to enable whole plants to respond differently to forthcoming stress [Rozendaal et al. 2006; @niinemetsResponsesForestTrees2010a]
 
 However, even with distinct features of sun and shade traits, trait adaptation to light maximizes light use efficiency for photosynthesis at both high and low light, while also adapting to other stressors as mentioned above. In light limited conditions, shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis, which "leads to a similar chlorphyll content on an area basis compared with sun leaves. This enables shade leaves to realize similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, Rozendaal et al. 2006]
 
@@ -268,7 +269,7 @@ With increasing height and age, competition for light decreases as availability 
 
 **Intra-canopy on the same species leaf trait variation**
 
-Several studies point towards common variations and differences in leaf trait plasticity within-species and at an intra-canopy gradient which shapes leaf structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissapation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table 1. summaries relevant traits for thermal sensitivity.
+Several studies point towards common variations and differences in leaf trait plasticity within-species and at an intra-canopy gradient which influences leaf structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissapation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table 1. summarizes relevant traits for thermal sensitivity.
 
 
 [I think that this distinction should be addressed throughout the manuscript, so that it is always clear that the reader knows whether the cited references are about inter- or intra-specific variation, and that we address the different trait axes (Marielle made a comment on this earlier as well, that within species patterns may not follow leaf economics spectrum expectations). Ideally we would address the different categories, but if lack of information forces us to focus on just within species or just across species, this should still be made clear. photosynthesis, and canopy-level carbon uptake. They don't have to be treated separately, but it should always be clear which is being referred to. And in the consequences for scaling section this is of course also relevant.]
@@ -289,7 +290,7 @@ nocite: |
 
 Are traits shaped more by height or light?
 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, where as Q10 and E10 remained contant with height [Cavaleri et al. 2008]. In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing seaon LMA and $N area$ continued to increase in the upper canopy due to light driven changes [Coble & Cavaleri 2015; Coble et al. 2016].In addition, carbon isotope composition also increased with height, independent of ligtht [Coble & Cavaleri 2015]
+Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, where as Q10 and E10 remained contant with height [Cavaleri et al. 2008]. In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [Coble & Cavaleri 2015; Coble et al. 2016].In addition, carbon isotope composition also increased with height, independent of ligtht [Coble & Cavaleri 2015]
 
 Height-based leaf trait variation in Quercus alba and Quercus velutina showed decrease in lobation with increased height in two tall species, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, Sack et al. 2006 did not observe trait variation based on height in Quercus spp.
 
@@ -301,24 +302,23 @@ Height is more important than light in determining leaf morphology in a tropical
 *Leaf area / characteristic dimension*:
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
 
-Leaf temperature is generally associated to increase with leaf area ($LA$) [ Wright et al. 2019]. However, thermal imagery shows that leaf area can be a predictor for leaf temperatures ranges [$Trange$] among a given number of samples, but effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in efffective leaf width, boundary layer thickness and resistance increases along with stomtal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn traspirational cooling in large leaves [@fauset_differences_2018]. Because rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in deteriming the changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. 
+Leaf temperature is generally associated to increase with leaf area ($LA$) [ Wright et al. 2019]. However, thermal imagery shows that though leaf area can be a predictor for leaf temperatures ranges [$Trange$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in efffective leaf width, boundary layer thickness and resistance increases along with stomtal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn traspirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in deterimining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension is generally greater in shaded understory leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration break the entirity of leaf dimension by enhancing a smaller characteristic dimension, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies [Vogel 1970; Roth-Nebelsick 2001;Schuepp 1993; Sack et al. 2006]. 
+
 - Max stomatal conductance - increases with canopy height (Kenzo et al. 2015)
 Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
-Leaf characteristics such as lobes, leaf elongation and serration, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies[Vogel 1970; Roth-Nebelsick 2001;
-Schuepp 1993; Sack et al. 2006]. 
 
 *Thermal time constant (probably not a lot out there)*
 -	Curtis et. al, 2018 – higher in more exposed leaves (heat up slower, cool slower)
 -	Michaeletz has used this in theoretical calculations (Michaeletz et al. 2016 and 2015?
 
--Effective leaf width defined as the largest circle that can be inscribed in a leaf is an effective predictor of leaf thermal time constant and leaf boundary layer thickness. Large leaves have greater effective leaf width which increases their thermal time constant by prolonging leaf cooling time compared to small leaves that have a smaller effective leaf width, and thus small thermal time constant with shorter cooling time. Increased leaf width typical in larger leaves was also observed to increase leaf to air temperature difference. [@leighInfluenceLeafSize2017]   
-
-
+Thermal time constant, a leaf trait, quantifies heat flux in a leaf through incorporating heat stored versus heat exchanged with the environment, with relation to time. It comprises of several underlying traits -- leaf dry matter content, leaf width, water mass, specific heat capacity, leaf geometery, two sided surface area and stomatal conductance [@michaletzEnergeticCarbonEconomic2016]. Typically, larger leaves with greater leaf width experience longer leaf cooling time and thus increased thermal time constant compared to leaves with smaller leaf width. Dissections in leaves such as lobes decreases leaf with and thus thermal time constant [@leighInfluenceLeafSize2017]. Additionally, leaf with a smaller time constant experiences variable leaf temperatures in relation to the environment and exhibits instantaneous carbon assimilation rate and stable photosynthesis enabled by greater LMA [@michaletzEnergeticCarbonEconomic2016] Guessing, sun exposed leaves have lower thermal time constant than shaded?      
 [I have Michaletz's code to calculate the thermal time constant, so if there are data, or general tendencies for changes in leaf area, LMA, leaf width and leaf dry matter content we can determine how these trends would translate into changes in thermal time constant. 
 In practice, an important driver seems to be leaf water content per unit area (I think Lawren might have mentioned this as well in our meeting), so if we can conclude that that is something that scales with the vertical gradient, then we can make an informed guess about how the thermal time constant will change--Martijn Slot]
 
-*Carotinoids/Xanthophyll cycle pigments* 
--	photoprotective- disseminate heat, acclimate to high T. THese are proportional to irradiance 
+*Carotenoids/Xanthophyll cycle pigments* 
+
+High light stimulates the need for photoprotection in leaves in order to protect internal photosystem 2 from photoinhibition through D1 protein replacement. Thus leaves exposed to greater irradiance have greater pools of xanthophyll pigments express on a mass or area basis--photoprotective pigments comprising of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enable acclimation to high temperature [Mathur et al. 2018]. These are found to be proportional to within-canopy light gradient at an inter- and intra-species level. Therefore, lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [Niinemets et al. 1998]. In neotropical forest, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pool on an area or chl basis compared to low light leaves that showed greater mass based chlorophyll and lutein and neoxanthin carotenoids [Mastubara et al. 2009]
+  
 -	antioxidant scavenging function- protect against cellular damage
 - Koniger et. al. 1995, and  Matsubara et al. 2009
 
